yamls/dev/nmviajes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nmviajes-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nmviajes-dev
  template:
    metadata:
      labels:
        app: nmviajes-dev
    spec:
      containers:
      - name: nmviajes-dev
        image: expcontainerregistryqa.azurecr.io/nmviajes-dev:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nmviajes-dev
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: nmviajes-dev
